add resource bundle with mesages